Fix Core Data object manipulation after deletion bug

--- a/Weather.xcodeproj/xcshareddata/xcschemes/Tenki Weather.xcscheme
+++ b/Weather.xcodeproj/xcshareddata/xcschemes/Tenki Weather.xcscheme
@@ -50,6 +50,13 @@
             ReferencedContainer = "container:Weather.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CORESVG_VERBOSE"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
