--- a/Weather.xcodeproj/xcshareddata/xcschemes/Tenki Weather.xcscheme
+++ b/Weather.xcodeproj/xcshareddata/xcschemes/Tenki Weather.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "83A7E5FA2DE5C09D00A6C622"
+               BuildableName = "TenkiWeatherTests.xctest"
+               BlueprintName = "TenkiWeatherTests"
+               ReferencedContainer = "container:Weather.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
